Alert pattern edits for issue #194
modified aria-practices.html:
In the alert design pattern section:
1. Fixed plural/singular mismatch in second paragraph of introduction.
2. Removed the word "compliance" from third paragraph.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -210,7 +210,7 @@
         It is important to note that, at this time, screen readers do not inform users of alerts that are present on the page before page load completes.
       </p>
       <p>
-        Because an alert is intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working,
+        Because alerts are intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working,
         it is crucial they do not affect keyboard focus.
         The <a href="#alertdialog">alert dialog</a> is designed for situations where interrupting work flow is necessary.
       </p>
@@ -219,7 +219,7 @@
         An alert that disappears too quickly can lead to failure to meet
         <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-no-exceptions.html">WCAG 2.0 success criterion 2.2.3</a>.
         Another critical design consideration is the frequency of interruption caused by alerts.
-        Frequent interruptions inhibit usability for people with visual and cognitive disabilities, which also makes compliance with
+        Frequent interruptions inhibit usability for people with visual and cognitive disabilities, which makes meeting the requirements of 
         <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-postponed.html">WCAG 2.0 success criterion 2.2.4</a>
         more difficult.
       </p>
