Fix broken links in examples

--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -25,7 +25,7 @@
 
       <p>This example shows a simple alert after you click the button.</p>
 
-      <p><a href="../../aria-practices.html#alert">More information on alert pattern</a></p>
+      <p><a href="../../#alert">More information on alert pattern</a></p>
 
       <button id="alert-trigger">Trigger an alert</button>
 
