--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -11,7 +11,7 @@
     <main>
       <h1>ARIA Breadcrumb Design Pattern Example</h1>
       <p>
-        This page requires updates per 
+        This page requires updates per
         <a href="https://github.com/w3c/aria-practices/issues/187">issue 187.</a>
         Please provide any additional feedback in this issue.
       </p>
@@ -27,13 +27,13 @@
         <nav aria-label="Breadcrumb" class="breadcrumb">
           <ol>
             <li>
-              <a href="../../../aria/aria.html">WAI-ARIA</a>
+              <a href="https://www.w3.org/TR/wai-aria-1.1/">WAI-ARIA</a>
             </li>
             <li>
-              <a href="../../aria-practices.html">Authoring Practices</a>
+              <a href="../../">Authoring Practices</a>
             </li>
             <li>
-              <a href="../../aria-practices.html#aria_ex">Design Pattern Examples</a>
+              <a href="../../#aria_ex">Design Pattern Examples</a>
             </li>
             <li>
               <a href="./index.html" aria-current="page">Breadcrumb</a>
