--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -13,12 +13,12 @@
   <main>
     <h1>Button Examples</h1>
     <p>
-    This example page requires updates per 
+    This example page requires updates per
     <a href="https://github.com/w3c/aria-practices/issues/189">issue 189.</a>
     Please provide any additional feedback in this issue.
   </p>
   <p>
-    The following examples of the 
+    The following examples of the
     <a href="../../#h-button">button design pattern</a>
     demonstrate both command and toggle buttons.
   </p>
@@ -225,7 +225,7 @@
   </section>
 
  <section>
-    <h2 id="sc1_label">HTML Source Code</h2>
+    <h2>HTML Source Code</h2>
 
     <h3 id="sc1_label">First Example: Push button</h3>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
