--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -176,7 +176,7 @@
           </div>
           <div role="row">
             <span role="gridcell"><h3>
-                <a tabindex="-1" href="https://www.w3.org › WAI">Accessible Rich Internet
+                <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet
                   Applications (ARIA) Working Group - W3C</a>
               </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -220,8 +220,8 @@
           </div>
           <div role="row">
             <span role="gridcell"><h3>
-                <a tabindex="-1" href="https://dvcs.w3.org/hg/aria-unofficial/raw.../index.html">ARIA
-                  in HTML - Web Platform Specs</a>
+                <a tabindex="-1" href="https://www.w3.org/TR/html-aria/">ARIA
+                  in HTML</a>
               </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
             >Jul 24, 2015 - Setting an ARIA role and/or aria-* attribute that matches the
@@ -229,7 +229,7 @@
           </div>
           <div role="row">
             <span role="gridcell"><h3>
-                <a tabindex="-1" href="https://www.w3.org/WAI/aria/faq">Accessible Rich
+                <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/faq">Accessible Rich
                   Internet Applications (ARIA) Working Group - W3C</a>
               </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -247,7 +247,7 @@
           </div>
           <div role="row">
             <span role="gridcell"><h3>
-                <a tabindex="-1" href="https://dev.w3.org/html5/markup/aria/aria.html">ARIA -
+                <a tabindex="-1" href="https://w3c.github.io/html-reference/aria/aria.html">ARIA -
                   HTML5 - W3C on GitHub</a>
               </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -312,7 +312,7 @@
           </div>
           <div role="row">
             <span role="gridcell"><h3>
-                <a tabindex="-1" href="https://www.w3.org/.../Using_ARIA_landmarks_to_ide...">Using
+                <a tabindex="-1" href="https://www.w3.org/TR/WCAG20-TECHS/aria#ARIA11">Using
                   ARIA landmarks to identify regions of a page - WCAG WG - W3C</a>
               </h3></span> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -357,7 +357,7 @@
       <dt>Whether focus can wrap from the last column to the first column in the next row or from the first column to the last column in the previous row when <kbd>Right Arrow</kbd> and <kbd>Left Arrow</kbd> are pressed:</dt>
       <dd>
         This wrapping is expected in all grids except for those presenting tabular, i.e., spreadsheet-like, data.
-        The <a href="/dataGrids.html">data grid examples</a> demonstrate grids where focus movement does not wrap at the ends of rows.
+        The <a href="dataGrids.html">data grid examples</a> demonstrate grids where focus movement does not wrap at the ends of rows.
       </dd>
       <dt>Whether focus can wrap to the first row in the next column or the last row in the previous column when <kbd>Down Arrow</kbd> and <kbd>Up Arrow</kbd> are pressed:</dt>
       <dd>
