--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -17,7 +17,7 @@
 
     <h2>Creating links using <code>role=link</code></h2>
 
-    <p> <a href="../../aria-practices.html#h-link">Authoring Practice Design Patten for Link</a></p>
+    <p> <a href="../../#h-link">Authoring Practice Design Patten for Link</a></p>
     <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors not re-purpose other elements to create links.</p>
     <h2 id="id1">Example Links</h2>
     <div id="example">
