--- a/examples/menubar/menubar-1/mb-about.html
+++ b/examples/menubar/menubar-1/mb-about.html
@@ -14,7 +14,7 @@
         <h1 id="about">About</h1>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
-        <h2 id="mb-about.html#overview">Overview</h2>
+        <h2 id="overview">Overview</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
         <h2 id="admin">Administration</a></li>
@@ -29,4 +29,4 @@
     </main>
 </body>
 
-</html> 
+</html>
