--- a/examples/menubar/menubar-1/mb-research.html
+++ b/examples/menubar/menubar-1/mb-research.html
@@ -21,7 +21,7 @@
         <h2 id="res-centers">Reseach Centers</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
-        <h2 id="es-find">Find an Expert</h2>
+        <h2 id="res-find">Find an Expert</h2>
         <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
 
         <h2 id="res-park">Research Park</h2>
@@ -33,4 +33,4 @@
     </main>
 </body>
 
-</html> 
+</html>
