--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -23,11 +23,11 @@
   </p>
   <p>
     Following are two implementations of the
-    <a href="../../#menu">design pattern for menubar</a>
+    <a href="../../../#menu">design pattern for menubar</a>
     that demonstrate how a menubar can be used for site navigation. Each item in the two menubars
     represents a section of a web site for a mythical university and opens a pull down menu with links to pages within that
     section. The two examples differ only in how they are coded; see notes that follow each example.
-  </p>  
+  </p>
 
   <p>Similar examples include: </p>
   <ul>
@@ -454,7 +454,7 @@
     </table>
   </section>
 
-  <section>    
+  <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
     <h3 id="rps1_label">Menubar</h3>
 
