--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -30,7 +30,7 @@
   <p>
     The following example demonstrates using the
     <a href="../../../#menu">menubar design pattern</a>
-    to provide access to sets of actions. 
+    to provide access to sets of actions.
     Each item in this example menubar represents a category of text
     formatting commands. The formatting commands are revealed in popup menus that can be opened from
     items in the menubar. This example also demonstrates <code>menuitemradio</code> and <code>menuitemcheckbox</code> elements.
@@ -326,7 +326,7 @@
       </tbody>
     </table>
     </section>
-    
+
     <section>
       <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
 
@@ -355,7 +355,7 @@
                   Identifies the <code>ul</code> element as a container for set of <code>menuitem</code> widgets associated with the menubar.
                 </li>
                 <li>
-                  Is not focusable because focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>, 
+                  Is not focusable because focus is managed using <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                 </li>
               </ul>
             </td>
@@ -374,7 +374,7 @@
                 <li>
                   Defines an acessible name for the <code>menubar</code>.
                 </li>
-                <li>Helps assistive technology users understand the purpose of the menubar and 
+                <li>Helps assistive technology users understand the purpose of the menubar and
                   distinguish it from any other menubars or similar elements on the page.</li>
               </ul>
             </td>
@@ -440,7 +440,7 @@
                   When the page loads, the first item in the menubar has <code>tabindex=&quot;0&quot;</code>.
                 </li>
                 <li>
-                  Focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>, 
+                  Focus is managed using <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                   so the most recently focused item will be in the page <kbd>Tab</kbd> sequence.
                 </li>
               </ul>
@@ -510,7 +510,7 @@
                 Identifies the <code>ul</code> element as a container for set of <code>menuitem</code> widgets associated with the menu.
               </li>
               <li>
-                Is not focusable because focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>, 
+                Is not focusable because focus is managed using <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
               </li>
             </ul>
           </td>
@@ -591,7 +591,7 @@
               <li>
                 The visual state of the selection is synchronized with the <code>aria-checked</code>
                 value using CSS attribute selectors, e.g., [aria-checked=&quot;true&quot;],
-                 the CSS pseudo selector <code>:before</code>, 
+                 the CSS pseudo selector <code>:before</code>,
                  and the <code>content</code> property.
               </li>
             </ul>
@@ -613,7 +613,7 @@
               <li>
                 The visual state of the selection is synchronized with the <code>aria-checked</code>
                 value using CSS attribute selectors, e.g., [aria-checked=&quot;true&quot;],
-                 the CSS pseudo selector <code>:before</code>, 
+                 the CSS pseudo selector <code>:before</code>,
                  and the <code>content</code> property.
               </li>
             </ul>
@@ -686,7 +686,7 @@
               <li>
                 The visual state of the selection is synchronized with the <code>aria-checked</code>
                 value using CSS attribute selectors, e.g., [aria-checked=&quot;true&quot;],
-                 the CSS pseudo selector <code>:before</code>, 
+                 the CSS pseudo selector <code>:before</code>,
                  and the <code>content</code> property.
               </li>
             </ul>
@@ -708,7 +708,7 @@
               <li>
                 The visual state of the selection is synchronized with the <code>aria-checked</code>
                 value using CSS attribute selectors, e.g., [aria-checked=&quot;true&quot;],
-                 the CSS pseudo selector <code>:before</code>, 
+                 the CSS pseudo selector <code>:before</code>,
                  and the <code>content</code> property.
               </li>
             </ul>
@@ -717,7 +717,7 @@
       </tbody>
     </table>
   </section>
-  
+
   <section>
     <h2>Javascript and CSS Source Code</h2>
     <ul>
