--- a/examples/presentation/PresentationRoleExamples.html
+++ b/examples/presentation/PresentationRoleExamples.html
@@ -20,7 +20,7 @@
     describes the purpose of and tracks the work associated with completing this page.
   </p>
   <p>
-    The following examples explain the various effects of the <a href="../../#presentation_role_rules">rules for using role <code>presentation</code></a>
+    The following examples explain the various effects of the <a href="../../#presentation_role_effects">rules for using role <code>presentation</code></a>
     by illustrating how they change a browser's accessibility tree.
   </p>
     <section>
@@ -103,7 +103,7 @@
       <p>
         The first header element is absent from the accessible tree for the above example, but its
         text appears. The second header element is present as a
-        <a class="role-reference" href="#heading">heading</a>
+        <a href="https://www.w3.org/TR/wai-aria-1.1/#heading">heading</a>
         . The <code>img</code> element is not exposed at all:
       </p>
       <ul>
@@ -171,7 +171,7 @@
         </li>
       </ul>
     </section>
-<!-- 
+<!--
     <script>
       sourceCode.add('sc1', 'ex1');
       sourceCode.make();
