--- a/examples/grid/advancedDataGrid.html
+++ b/examples/grid/advancedDataGrid.html
@@ -8,7 +8,7 @@
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
 <script src="../js/utils.js" type="text/javascript"></script>
-<!--  
+<!--
   js and css for this example.
   Additional scripts will need to be added to add the advanced functions required by issue #155.
 -->
@@ -125,11 +125,11 @@
     <ul>
       <li>
         CSS:
-        <a href="css/example_name.css" type="tex/css">example_name.css</a>
+        <!--a href="css/example_name.css" type="tex/css">example_name.css</a-->
       </li>
       <li>
         Javascript:
-        <a href="js/example_name.js" type="text/javascript">example_name.js</a>
+        <!--a href="js/example_name.js" type="text/javascript">example_name.js</a-->
       </li>
     </ul>
   </section>
