--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -11,9 +11,9 @@
 
     <link href="css/MenubuttonLinks.css" rel="stylesheet">
 
-    <script src="js/Menubutton.js" type="text/javascript"></script> 
-    <script src="js/PopupMenuLinks.js" type="text/javascript"></script> 
-    <script src="js/MenuItemLinks.js" type="text/javascript"></script> 
+    <script src="js/Menubutton.js" type="text/javascript"></script>
+    <script src="js/PopupMenuLinks.js" type="text/javascript"></script>
+    <script src="js/MenuItemLinks.js" type="text/javascript"></script>
   </head>
   <body>
     <main>
@@ -21,8 +21,8 @@
       <p>
         This example implements the <a href="../../../#menubutton">menu button design pattern</a>
         for a button that provides access to a menu of link targets.
-      An ARIA menu button is defined as any element with <code>role=&quot;button&quot;</code> with an <code>aria-haspopup=&quot;true&quot;</code>.  
-      In this example the default role of link for the <code>a</code> element is overridden using <code>role="button"</code></code> to define the menu button.  It is also important to note in the popup menu that the <code>role=menuitem</code> is on the 
+      An ARIA menu button is defined as any element with <code>role=&quot;button&quot;</code> with an <code>aria-haspopup=&quot;true&quot;</code>.
+      In this example the default role of link for the <code>a</code> element is overridden using <code>role="button"</code></code> to define the menu button.  It is also important to note in the popup menu that the <code>role=menuitem</code> is on the
       <code>a</code> element and not the <code>li</code> element, since a <code>menuitem</code> widget cannot contain any intereactive elements (e.g links).</p>
       <p>Similar examples include: </p>
       <ul>
@@ -32,12 +32,12 @@
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        <div id="ex1">
 
-          <div class="menu_button"> 
+          <div class="menu_button">
             <a
               id="menubutton"
               role="button"
               href="#"
-              aria-haspopup="true" 
+              aria-haspopup="true"
               aria-expanded="false"
               aria-controls="menu2"
               >
@@ -82,21 +82,21 @@
               window.onload=function() {
               var menubutton = new Menubutton(document.getElementById('menubutton'));
               menubutton.init();
-            }    
+            }
 
             </script>
-        </div>  
+        </div>
 
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
 
-      </section>   
+      </section>
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        
+
         <h3 id="kbd1_label">Menu Button</h3>
 
-        <table aria-labelledby="kbd1_label kbd_label"> 
+        <table aria-labelledby="kbd1_label kbd_label">
           <thead>
             <tr>
               <th>Key</th>
@@ -119,7 +119,7 @@
 
          <h3 id="kb2_label" class="widget">Popup Menu</h3>
 
-        <table aria-labelledby="kbd2_label kbd_label"> 
+        <table aria-labelledby="kbd2_label kbd_label">
           <thead>
             <tr>
               <th style="min-width: 8em">Key</th>
@@ -141,7 +141,7 @@
                 <ul>
                   <li>Closes popup menu.</li>
                   <li>Moves focus to button menu.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -150,7 +150,7 @@
                 <ul>
                   <li>Moves focus to previous popup menu item.</li>
                   <li>If first popup menu item, focus is moved to the last popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
              <tr>
@@ -159,7 +159,7 @@
                 <ul>
                   <li>Moves focus to next popup menu item.</li>
                   <li>If last popup menu item, focus is moved to the first popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -167,7 +167,7 @@
               <td>
                 <ul>
                   <li>Moves focus to first popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -175,7 +175,7 @@
               <td>
                 <ul>
                   <li>Moves focus to last popup menu item.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
             <tr>
@@ -184,7 +184,7 @@
                 <ul>
                   <li>Moves focus to the next popup item that starts with that letter.</li>
                   <li>If no popup menu item starts with the letter, focus does not move.</li>
-                </ul>  
+                </ul>
               </td>
             </tr>
           </tbody>
@@ -271,7 +271,7 @@
                 <td>
                   <ul>
                     <li>Indicates popup menu is open.</li>
-                  </ul>  
+                  </ul>
                 </td>
             </tr>
             <tr>
@@ -281,11 +281,11 @@
                 <td>
                   <ul>
                     <li>Indicates popup menu is closed.</li>
-                  </ul>  
+                  </ul>
                 </td>
             </tr>
           </tbody>
-        </table> 
+        </table>
 
         <h3 id="rps2_label">Popup Menu Widget</h3>
 
@@ -375,19 +375,19 @@
               </td>
             </tr>
           </tbody>
-        </table> 
+        </table>
 
-      </section>    
+      </section>
 
       <section>
         <h2>Javascript and CSS Source Code</h2>
-      
+
         <ul>
-          <li>CSS: <a href="css/menuButtonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
+          <li>CSS: <a href="css/menubuttonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
           <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
           <li>Javascript: <a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
           <li>Javascript: <a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
-        </ul>    
+        </ul>
       </section>
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
